@@ -87,7 +87,7 @@ The following constants are made available, but generally not needed</td></tr>
 pygame.constants.display (constants)
 </tt></font><ul>
 HWSURFACE - surface in hardware video memory. (equal to 1)<br>
-RESIZEABLE - display window is resizeable<br>
+RESIZABLE - display window is resizeable<br>
 ASYNCBLIT - surface blits happen asynchronously (threaded)<br>
 OPENGL - display surface will be controlled by opengl<br>
 OPENGLBLIT - opengl controlled display surface will allow sdl
