@@ -25,9 +25,9 @@ a peformance penalty. (as opposed to just keeping a Rect value inside the class)
 """
 
 #sadly, we need to hide the rect from the documentation finder for now
-import pygame.rect as rectmodule
-R = [rectmodule.Rect]
-del rectmodule
+from pygame.rect import Rect
+R = [Rect]
+del Rect
 
 
 class UserRect:
@@ -39,7 +39,7 @@ object. The only difference is it is a real python class
 object, not a C extension type.
 """
     def __init__(self, *args):
-        try: self.__dict__['rect'] = R[0](*args)
+        try: self.__dict__['rect'] = apply(R[0], args)
         except TypeError:
             raise TypeError, 'Argument must be rectstyle object'
         for a in dir(self.rect):
